# microblog-server

./: Dockerfile  Makefile  README.md  TODO.md  setup.cfg
.github/workflows/: container.yml
container/: Dockerfile  README.md  addpasswd.c  entrypoint  gitssh
makefiles/: docker.mk  pypi.mk
src/microblog/: __init__.py  cli.py  images.py  input.py  logging.py  pelican.py  renderers.py  storage.py  yaml.py
tests/: conftest.py  test_storage.py
