[metadata]
name = microblog-server
url = https://github.com/sio/microblog-server
description = Microblog server backend
long_description = file: README.md
long_description_content_type = text/markdown
keywords = blog, microblog, git
license = Apache-2.0
license_file = LICENSE
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License


[options]
packages =
    microblog
package_dir =
    =src
install_requires =
    GitPython
    markdown
    pymdown-extensions
    PyYAML


[options.package_data]
* = *.md, *.toml
